// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list item card > should be displayed as skeleton 1`] = `
<div
  class="card bg-base-100 md:shadow-xl"
>
  <div
    class="card-body prose"
  >
    <h2
      class="skeleton card-title"
    >
       
    </h2>
     
    <p>
      <span
        class="skeleton mb-px block"
      >
         
      </span>
       
      <span
        class="skeleton mb-px block"
      >
         
      </span>
       
      <span
        class="skeleton mb-px block"
      >
         
      </span>
       
      <span
        class="skeleton mb-px block"
      >
         
      </span>
    </p>
     
    <div
      class="card-actions"
    >
      <button
        class="skeleton btn btn-neutral w-full md:flex-1"
      >
         
      </button>
       
      <button
        class="skeleton btn btn-neutral w-full md:flex-1"
      >
         
      </button>
    </div>
  </div>
</div>
`;

exports[`list item card > should be displayed default 1`] = `
<div
  class="card bg-base-100 md:shadow-xl"
>
  <div
    class="card-body prose"
  >
    <h3
      class="card-title"
    >
       
      name
    </h3>
     
    <div
      class="prose"
    >
       
      

Mock
    </div>
     
     
    <div
      class="card-actions pt-4"
    >
      <button
        class="btn btn-outline btn-neutral w-full md:flex-1"
      >
        <svg
          class="lucide-icon lucide lucide-pencil"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          
          <path
            d="m15 5 4 4"
          />
          
          
        </svg>
        
              Редактировать
      </button>
       
      <button
        class="btn btn-outline btn-error w-full md:flex-1"
      >
        <svg
          class="lucide-icon lucide lucide-trash-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
          
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
          
          
        </svg>
        
              Удалить
      </button>
    </div>
    
  </div>
</div>
`;

exports[`list item card > should be displayed for reordering 1`] = `
<div
  class="card bg-base-100 md:shadow-xl cursor-grab select-none"
>
  <div
    class="card-body prose"
  >
    <h3
      class="card-title mb-0"
    >
      <svg
        class="lucide-icon lucide lucide-grip-vertical text-neutral-content"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        
        <circle
          cx="15"
          cy="19"
          r="1"
        />
        
        
      </svg>
       
      name
    </h3>
     
    
  </div>
</div>
`;

exports[`list item card > should enable editing mode 1`] = `
<div
  class="card bg-base-100 md:shadow-xl"
>
  <div
    class="card-body prose"
  >
     
    

Mock
  </div>
</div>
`;
